--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="detalle" id="ErrorMsg">
                 <img src="asset/advertencia.png" alt="advertencia">
-                Solo letras minúsculas y sin acentos
+                Solo letras minúsculas, sin acentos y sin caracteres
             </div>
             <div class="contenedor_botones">
                 <button class="boton" id="encriptar" onclick="encriptarTexto()">Encriptar</button>
