--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 alt="icono Linkedin"></a>
         <a href="https://github.com/CristianAguilarOficial/Encriptador" target="_blank"><img src="./asset/github.png" class="pgn"
                 alt="icono GitHub"></a>
-        <a href="/asset/pageSecod.html"><img src="./asset/instagram.png" class="pgn"
+        <a href="asset/pageSecod.html"><img src="./asset/instagram.png" class="pgn"
                 alt="icono Instagram"></a>
     </footer>
     <script src="js/script.js"></script>
